--- a/index.html
+++ b/index.html
@@ -377,6 +377,18 @@
             </a></li>
         </ul>
     </div>
+    <!-- form to sign-->
+    <div>
+        <form action="">
+            <h2>ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+            <input type="email">
+            <button>
+                Подписаться
+            </button>
+            
+        </form>
+
+    </div>
     </div>
 </footer>
 
