работа над формой

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                     <label for="textarea" class="form-title-input">Комментарии</label>
                     <textarea type="text" name="textarea" class="modal-input modal-input-textarea" id="textarea" placeholder="Введите текст"></textarea>
                 </div>
-                <div class="modal-form-field">
+                <div class="modal-form-field-checkbox">
                     <label for="checkbox" class="checkbox-modal">
                         <input type="checkbox"  name="checkbox" class="modal-input-checkbox" id="checkbox">  Соглашаюсь с рассылкой и принимаю  <span><a class="text-link-checkbox"href="" target="_blank" rel="noopener noreferrer">Условия договора</a></span>
                     </label>       
