--- a/index.html
+++ b/index.html
@@ -409,30 +409,34 @@
         <p class="modal-form-title">Оставьте свои данные, мы Вам перезвоним</p>
         <form action="#" class="modal-form">
                 <div class="modal-form-field">
-                    <label for="user-name" class="form-title-input"><svg class="modal-icon" width="18" height="18">
-                            <use href="./images/symbol-defs.svg#icon-modal-person"></use>
-                        </svg>Имя</label>
+                    <label for="user-name" class="form-title-input">Имя</label>
                     <input type="text" name="user-name" class="modal-input modal-input-name" id="user-name" placeholder=" " autofocus>
+                    <span class="modal-icon"><svg  width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-modal-person"></use>
+                    </svg></span>
                 </div>
                 <div class="modal-form-field">
-                    <label for="user-tel" class="form-title-input"><svg class="modal-icon" width="18" height="18">
-                            <use href="./images/symbol-defs.svg#icon-modal-phone"></use>
-                        </svg>Телефон</label>
+                    <label for="user-tel" class="form-title-input">Телефон</label>
                     <input type="tel" name="user-tel" class="modal-input modal-input-tel" id="user-tel">
+                    <span class="modal-icon"><svg width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-modal-phone"></use>
+                    </svg></span>
                 </div>
                 <div class="modal-form-field">
-                    <label for="user-email" class="form-title-input"><svg class="modal-icon" width="18" height="18">
-                            <use href="./images/symbol-defs.svg#icon-modal-mail"></use>
-                        </svg>Почта</label>
+                    <label for="user-email" class="form-title-input">Почта</label>
                     <input type="email" name="user-email" class="modal-input modal-input-email" id="user-email">
+                    <span  class="modal-icon"><svg width="18" height="18">
+                        <use href="./images/symbol-defs.svg#icon-modal-mail"></use>
+                    </svg></span>
                 </div>
                 <div class="modal-form-field">
                     <label for="textarea" class="form-title-input">Комментарии</label>
                     <textarea type="text" name="textarea" class="modal-input modal-input-textarea" id="textarea" placeholder="Введите текст"></textarea>
                 </div>
                 <div class="modal-form-field-checkbox">
-                    <label for="checkbox" class="checkbox-modal">
-                        <input type="checkbox"  name="checkbox" class="modal-input-checkbox" id="checkbox">  Соглашаюсь с рассылкой и принимаю  <span><a class="text-link-checkbox"href="" target="_blank" rel="noopener noreferrer">Условия договора</a></span>
+                    <label class="checkbox-modal">
+                        <input type="checkbox"  name="checkbox" class="modal-input-checkbox"><span class="icon-checkbox">
+                        </span> Соглашаюсь с рассылкой и принимаю  <a class="text-link-checkbox"href="" target="_blank" rel="noopener noreferrer"> Условия договора</a></span>
                     </label>       
                 </div>
             <button type="submit" class="modal-form-btn">Отправить</button>
